Remove extra container class

--- a/21_bt_michaelJackson_foleyM-luJ/index.html
+++ b/21_bt_michaelJackson_foleyM-luJ/index.html
@@ -11,7 +11,7 @@
 		<a href="#buttons">Buttons</a>
 	</nav>
 	<div class="container">
-		<div class="container" id = "home">
+		<div id = "home">
 			<br><br>
 			<h1>Bootstrap</h1>
 			<h3>An introductory page to Bootstrap!</h3>
