--- a/21_bt_michaelJackson_foleyM-luJ/index.html
+++ b/21_bt_michaelJackson_foleyM-luJ/index.html
@@ -1,17 +1,29 @@
+<!-- Team michaelJackson (Maryann Foley and Jack Lu)
+SoftDev1 pd8
+K21 -- Who Does Frame Work For?
+2018-11-08 -->
+
 <!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <title>Shoe buckle</title>
+        <style type="text/css">
+            #links{
+                color: white;
+            }
+        </style>
     </head>
 
     <body>
         <nav class="navbar fixed-top navbar-dark bg-dark">
-            <a href="#home">Home</a>
-            <a href="#cols">Containers</a>
-            <a href="#buttons">Buttons</a>
-            <a href="#media">Media</a>
-            <a href="#alert">Alert</a>
-            <a href="#table">Table</a>
+            <a href="#home" id="links">Home</a>
+            <a href="#intro" id="links">Introduction</a>
+            <a href="#cols" id="links">Containers</a>
+            <a href="#buttons" id="links">Buttons</a>
+            <a href="#media" id="links">Media</a>
+            <a href="#alert" id="links">Alerts</a>
+            <a href="#table" id="links">Tables</a>
         </nav>
         <div class="container">
             <div id = "home">
@@ -26,10 +38,18 @@
                 If you try to resize your window, the text will be adjusted according to new dimensions
                 </p>
             </div>
+            <br id="intro"><br>
+            <h4>Introduction</h4>
+            <p>If you already have Bootstrap in your style sheet, <a href="#cols">skip this section.</a>
+                <br>To add Bootstrap CSS to your site, add the following line of code into the head section of your html file.</p>
+            <pre style="background-color: lightgray"><xmp>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            </xmp></pre>
+<p> You can also download and use a local version of the CSS sheet.  This is not recommended, but if you want to learn more <a href="http://getbootstrap.com/docs/4.1/getting-started/download/">here.</a></p>
             <br id="cols"><br>
             <h4>Containers</h4>
             <p>
-            With bootstrap, you are able to create containers that will dynamically resize and can be divided into 1-12 sections. This is written as follows:<br><pre><xmp>
+            With bootstrap, you are able to create containers that will dynamically resize and can be divided into 1-12 sections. This is written as follows:<br><pre><xmp style="background-color: lightgray">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
@@ -157,7 +177,7 @@
             <br id="buttons"><br>
             <h4>Buttons</h4>
             <p>
-            With bootstrap, you are able to create buttons of many styles without the hastle of making them look nice. This is written as follows:</p><br><pre><xmp>
+            With bootstrap, you are able to create buttons of many styles without the hastle of making them look nice. This is written as follows:</p><br><pre><xmp style="background-color: lightgray">
             <button type="button" class="btn btn-XXXX">Title</button>
             </xmp></pre>
             <br>
@@ -174,13 +194,13 @@
             <h5>Other button styles</h5>
             <p>Note: These can all be used with all above styles, primary is being used as an example.</p>
             <h6>Outline buttons</h6>
-            <pre><xmp>
+            <pre><xmp style="background-color: lightgray">
             <button type="button" class="btn btn-outline-primary">Primary</button>
             </xmp></pre><br>
             <button type="button" class="btn btn-outline-primary">Primary</button>
             <br><br>
             <h6>Disabled buttons</h6>
-            <pre><xmp>
+            <pre><xmp style="background-color: lightgray">
             <button type="button" class="btn btn-primary" disabled>Primary</button>
             </xmp></pre><br>
             <button type="button" class="btn btn-primary" disabled>Primary</button>
@@ -189,7 +209,7 @@
             <p>Try pressing the button above!<br>Note: This does not prevent the button from being clicked at all costs; someone can always edit the html from their browser!</p>
             <br><br>
             <h6>Buttons as a class</h6>
-            <pre><xmp>
+            <pre><xmp style="background-color: lightgray">
             <a class="btn btn-primary" href="#" role="button">Link</a>
             <input class="btn btn-primary" type="submit" value="Submit">
             </xmp></pre>
@@ -197,9 +217,9 @@
             <a class="btn btn-primary" href="#" role="button">Link</a>
             <input class="btn btn-primary" type="submit" value="Submit">
 
-		<br id="media"><br>
+		<br id="media"><br><br>
             <h4>Media</h4>
-            <p>Bootstrap takes care of problems with displaying media objects alongside text</p>
+            <p>Bootstrap takes care of problems with displaying media objects alongside text.</p>
             <div class="media">
                 <img class="mr-3" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt="git octopus">
                 <div class="media-body">
@@ -209,7 +229,7 @@
             </div>
             Basic code for media formatting
             <pre>
-                <xmp>
+                <xmp style="background-color: lightgray">
             <div class="media">
                 <img class="mr-3" src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt="git octopus">
                 <div class="media-body">
@@ -222,17 +242,17 @@
 
 		<br id="alert"><br>
             <h4>Alerts</h4>
-            <h4>Alerts can be triggered to inform users of info</h4>
-            <pre>
-            <xmp>
-                <div class="alert alert-primary" role="alert">primary alert</div>
-            </xmp>
-            </pre>
+            <h6>Alerts can be triggered to inform users of info.  They can be used with any of the styles that you can use with buttons.</h6>
             <div>
                 <div class="alert alert-primary" role="alert">primary alert</div>
                 <div class="alert alert-secondary" role="alert">secondary alert</div>
                 <div class="alert alert-success" role="alert">success alert</div>
             </div>
+            <pre>
+            <xmp style="background-color: lightgray">
+                <div class="alert alert-primary" role="alert">primary alert</div>
+            </xmp>
+            </pre>
         
 		<br id="table"><br>
             <h4>Tables</h4>
@@ -255,16 +275,12 @@
                         <td>1.2</td>
                         <td>1.3</td>
                     </tr>
-                </tbody>
-                <tbody>
                     <tr>
                         <th scope="row">2</th>
                         <td>2.1</td>
                         <td>2.2</td>
                         <td>2.3</td>
                     </tr>
-                </tbody>
-                <tbody>
                     <tr>
                         <th scope="row">3</th>
                         <td>3.1</td>
@@ -273,6 +289,27 @@
                     </tr>
                 </tbody>
             </table>
+
+<pre>
+                <xmp style="background-color: lightgray">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">col1</th>
+                        <th scope="col">col2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>1.1</td>
+                    </tr>
+                </tbody>
+            </table>
+        </xmp>
+    </pre>
+
+
         </div>
     </body>
 </html>
