--- a/29_js/buttons.html
+++ b/29_js/buttons.html
@@ -11,10 +11,14 @@
     <button id="b0">Fibonacci</button>
     <button id="b1">GCD</button>
     <button id="b2">Random Student</button>
-
+    <h3>Fibonacci response:</h3>
+    <p id="p0">Click the Fibonacci button!</p>
+    <h3>GCD:</h3>
+    <p id="p1">Click the GCD button!</p>
+    <h3>Random Student:</h3>
+    <p id="p2">Click the Random Student button!</p>
     <script src="funky_town.js"></script>
 	
 
-  </body>
   </body>
 </html>
