Error checking for form inputs

--- a/29_js/buttons.html
+++ b/29_js/buttons.html
@@ -8,17 +8,22 @@
     <title>JS work the second</title>
   </head>
   <body>
-    <button id="b0">Fibonacci</button>
-    <button id="b1">GCD</button>
-    <button id="b2">Random Student</button>
-    <h3>Fibonacci response:</h3>
-    <p id="p0">Click the Fibonacci button!</p>
-    <h3>GCD:</h3>
-    <p id="p1">Click the GCD button!</p>
-    <h3>Random Student:</h3>
-    <p id="p2">Click the Random Student button!</p>
+      <h3>Fibonacci response:</h3>
+      <p id="p0">Click the Fibonacci button!</p>
+      <input type="number" id="b0val" min="0" max="50"></input>
+      <button id="b0">Fibonacci</button>
+
+      <h3>GCD:</h3>
+      <p id="p1">Click the GCD button!</p>
+      <input type="number" id="b1val0" min="0"></input>
+      <input type="number" id="b1val1" min="0"></input>
+      <button id="b1">GCD</button>
+      <h3>Random Student:</h3>
+      <p id="p2">Click the Random Student button!</p>
+      <button id="b2">Random Student</button>
+
     <script src="funky_town.js"></script>
-	
+
 
   </body>
 </html>
